update latest price from sina

--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-stock trace will parse yahoo/sina finance data and generate some useful report
+stock trace will parse finance data from famous finance web site(yahoo/sina/reuters etc) and generate some useful report
