update for readme

--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
 stock trace will parse finance data from famous finance web site(yahoo/sina/reuters etc) and generate some useful report
+1.Parse stock data from Sina/Yahoo/ifeng/Google/reuters
