--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
 stock trace will parse finance data from famous finance web site(yahoo/sina/reuters etc) and generate some useful report
 1.Parse stock data from Sina/Yahoo/ifeng/Google/reuters
-2.Update from EGit
+2.Update from EGit test
